--- a/examples-documents-dashboards/R Markdown/R-Markdown-amidst-Madison-parks.Rmd
+++ b/examples-documents-dashboards/R Markdown/R-Markdown-amidst-Madison-parks.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "R Markdown amidst Madison parks"
-subtitle: "<span style='font-size:16px'> - <a href='https://data-cityofmadison.opendata.arcgis.com/datasets/parks'> City of Madison data </a> <br> - <a href='https://github.com/pablobernabeu/Data-is-present/blob/master/examples-documents-dashboards/R%20Markdown/R%20Markdown%20amidst%20Madison%20parks.Rmd' target='_top'> Code  </a> </span>"
+subtitle: "<span style='font-size:16px'> - <a href='https://data-cityofmadison.opendata.arcgis.com/datasets/parks'> City of Madison data </a> <br> - <a href='https://github.com/pablobernabeu/Data-is-present/blob/master/examples-documents-dashboards/R%20Markdown/R-Markdown-amidst-Madison-parks.Rmd' target='_top'> Code  </a> </span>"
 author: "Pablo Bernabeu"
 output: 
   bookdown::html_document2: default
@@ -39,9 +39,9 @@ Since this conference was originally going to take place in Madison, let's look 
 
 ## Park types {-}
 
-[Placeholder text] Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Figure \@ref(fig:park-types) shows the counts of various types of parks in Madison.
+<font style='color:grey'>[Placeholder text] Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</font> Figure \@ref(fig:park-types) shows the number of parks within each type.
 
-```{r park-types, fig.cap='Types of parks in Madison.'}
+```{r park-types, fig.cap='Number of parks within each type.'}
 
 # Showing the code because echo = TRUE 
 
@@ -50,13 +50,13 @@ dat = read.csv('https://opendata.arcgis.com/datasets/9e00ff81868e49b7ba65d4e628b
 dat = 
   dat %>%
   group_by(Type) %>%
-  mutate(count_types = n())
+  mutate(parks_number = n())
 
 ggplotly(
-  ggplot(dat, aes(x=reorder(Type, count_types), y=count_types,
-                  text = paste('Count =', count_types))) + 
+  ggplot(dat, aes(x=reorder(Type, parks_number), y=parks_number,
+                  text = paste('Number of parks =', parks_number))) + 
     theme(axis.title.y=element_blank()) + stat_identity(geom='bar') + 
-    labs(x='Type', y='Count') + coord_flip(), 
+    labs(x='Type', y='Number of parks') + coord_flip(), 
   tooltip = 'text'
 )
 
@@ -65,9 +65,7 @@ ggplotly(
 
 ## Twenty largest parks {-}
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Table \@ref(tab:largest-parks) shows the twenty largest parks types, along with their type and acreage.
-
-The code doesn't below because `echo = FALSE`. 
+<font style='color:grey'>[Placeholder text] Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</font> Table \@ref(tab:largest-parks) shows the twenty largest parks types, along with their type and acreage. The code doesn't show below because `echo = FALSE`. 
 
 ```{r largest-parks, echo=FALSE}
 
@@ -81,7 +79,7 @@ dat %>%
 ```
 
 
-We could choose to display the code for the table at this point, which can be done using the parameters `ref.label = 'largest-parks', echo = T, eval = F` in the chunk options ([Xie, Dervieux, &  Riederer, 2020](https://bookdown.org/yihui/rmarkdown-cookbook/reuse-chunks.html)).
+We could decide to display the code for the table at this point (or any other), which can be done using the parameters `ref.label = 'largest-parks', echo = T, eval = F` in the chunk options ([Xie, Dervieux, &  Riederer, 2020](https://bookdown.org/yihui/rmarkdown-cookbook/reuse-chunks.html)).
 
 ```{r ref.label = 'largest-parks', echo = T, eval = F}
 
