--- a/examples-documents-dashboards/Dashboards/Flexdashboard/Butterfly-species-richness-in-LA.Rmd
+++ b/examples-documents-dashboards/Dashboards/Flexdashboard/Butterfly-species-richness-in-LA.Rmd
@@ -98,7 +98,7 @@ code.r{ /* Code block */
   font-size: 12px;
   }
 
-pre { /* Code-fromatted output */
+pre { /* Code-formatted output */
   font-size: 14px;
   padding-top: 2px;
   padding-bottom: 2px;
